[package]
name = "godo"
version = "0.1.1"
authors = ["Hamster5295 <hamster5295@163.com>"]
edition = "2021"
description = "A Version Manager for Godot Engine."
readme= "README.md"
repository = "https://github.com/Hamster5295/godo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
indicatif = "0.17.7"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.11.0"
zip = "*"
