[package]
name = "godo"
version = "0.2.0"
authors = ["Hamster5295 <hamster5295@163.com>"]
edition = "2021"
description = "A Version Manager for Godot Engine."
readme= "README.md"
repository = "https://github.com/Hamster5295/godo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
colored = "2"
dirs = "5"
zip = "2"
anyhow = "1"
